--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "axios": "^0.24.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4.1.17",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
